--- a/pom.xml
+++ b/pom.xml
@@ -58,4 +58,14 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+      <id>debasish</id>
+      <url>http://18.222.117.86:8081/nexus/content/repositories/maven-hosted-release/</url>
+    </repository>
+    <snapshotRepository>
+      <id>debasish</id>
+      <url>http://18.222.117.86:8081/nexus/content/repositories/maven-hosted-snapshot/</url>
+    </snapshotRepository>
+  </distributionManagement>	
 </project>
