--- a/yaml/services/node-port.yaml
+++ b/yaml/services/node-port.yaml
@@ -4,9 +4,9 @@ metadata:
   name: my-service
 spec:
   selector:
-    app: nginx 
+    app: tomcat-cd 
   type: NodePort 
   ports:
   - nodePort: 31000
-    port: 80
-    targetPort: 80
+    port: 8080
+    targetPort: 8080
